--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   },
+  "engines": {
+    "node": "16",
+    "npm": "please-use-yarn",
+    "yarn": "1"
+  },
   "lint-staged": {
     "*.js": [
       "eslint --fix",
